--- a/Lets_Catalog/templates/layout.html
+++ b/Lets_Catalog/templates/layout.html
@@ -84,7 +84,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-    <script src="//apis.google.com/js/platform.js?onload=start"></script>
+    <script async src="//apis.google.com/js/platform.js"></script>
     <script>
     window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')
     </script>
